--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <a href="https://github.com/Mahadi-Ahammed" target="_blank" rel="noopener noreferrer"><button class="bn">Github</button></a>                
               </footer>
               
-              <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>
          $(window).on("load",function(){
      $(".loading").fadeOut("slow");
